Docker file and OneOffManipulations project is added

--- a/VesselPositionTracker.Api/Properties/launchSettings.json
+++ b/VesselPositionTracker.Api/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -16,7 +16,12 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "publishAllPorts": true
     }
-
   }
 }
