--- a/VesselPositionTracker.Persistance/VesselPositionTracker.Persistance.csproj
+++ b/VesselPositionTracker.Persistance/VesselPositionTracker.Persistance.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Voyage-Data-On-AWS-S3\Vessel_241486002_Movements_new.json~RF202791bd.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AWSSDK.Core" Version="3.3.107.26" />
     <PackageReference Include="AWSSDK.S3" Version="3.3.111.27" />
     <PackageReference Include="Dapper" Version="2.0.35" />
