Mmsi added to the query as a criteria

--- a/VesselPositionTracker.Api/Properties/launchSettings.json
+++ b/VesselPositionTracker.Api/Properties/launchSettings.json
@@ -16,12 +16,12 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
-    },
-    "Docker": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "publishAllPorts": true
     }
+    //"Docker": {
+    //  "commandName": "Docker",
+    //  "launchBrowser": true,
+    //  "launchUrl": "swagger",
+    //  "publishAllPorts": true
+    //}
   }
 }
