--- a/VesselPositionTracker.Api/appsettings.json
+++ b/VesselPositionTracker.Api/appsettings.json
@@ -3,7 +3,7 @@
 
 
   "ConnectionStrings": {
-    "voyagedemo": "Server=tcp:voyagedemo.database.windows.net,1433;Initial Catalog=FleetManagement;Persist Security Info=False;User ID=vocean;Password=Q!123456789;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "voyagedemo": "Server=tcp:voyagedemo.database.windows.net,1433;Initial Catalog=FleetManagement;Persist Security Info=False;User ID=vocean;Password=;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
 
     "Azure": {
       "ServiceEndpoint": "https://vesselposition.documents.azure.com:443/",
