Custom Exception Middleware and Error Handling Added

--- a/VesselPositionTracker.Api/VesselPositionTracker.Api.csproj
+++ b/VesselPositionTracker.Api/VesselPositionTracker.Api.csproj
@@ -24,5 +24,9 @@
     <ProjectReference Include="..\VesselPositionTracker.Persistance\VesselPositionTracker.Persistance.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Middleware\" />
+  </ItemGroup>
+
 
 </Project>
